# mapviewer

./: .gitignore  CMakeLists.txt  README.md  Viewer.sln
MapViewer/: ElevationMap.cpp  ElevationMap.h  GLRenderer.cpp  GLRenderer.h  MapViewer.rc  MapViewer.vcxproj  MapViewer.vcxproj.filters  MeshConstructor.cpp  MeshConstructor.h  MeshSubdivision.cpp  MeshSubdivision.h  Scene.cpp  Scene.h  Tesselator.cpp  Tesselator.h  Utils.cpp  Utils.h  VTZeroRead.cpp  VTZeroRead.h  Viewer.cpp
MapViewer/sdk/libpng/lib/: libpng16.lib  libpng16_static.lib  zlib.lib
MapViewer/sdk/libpng/lib/x64/: libpng16_static.lib  zlibstatic.lib
MapViewer/sdk/libpng/lib/x86/: zlibstatic.lib
MapViewer/sdk/og/: IOGCoreHelpers.h  IOGFrustum.h  IOGMath.h  IOGMatrix.h  IOGObb.h  IOGQuaternion.h  IOGVector.h  IOGVertexBuffers.h  OpenGL2.h  ogmatrix.cpp  ogshader.cpp  ogshader.h  ogvertexbuffers.cpp  ogvertexbuffers.h
assets/mvt/: mvt_12_2118_1458.mvt  mvt_13_4236_2916.mvt  mvt_13_4236_2917.mvt  mvt_13_4237_2916.mvt  mvt_13_4237_2917.mvt  mvt_14_8472_5832.mvt  mvt_14_8472_5833.mvt  mvt_14_8472_5834.mvt  mvt_14_8472_5835.mvt  mvt_14_8473_5832.mvt  mvt_14_8473_5833.mvt  mvt_14_8473_5834.mvt  mvt_14_8473_5835.mvt  mvt_14_8474_5832.mvt  mvt_14_8474_5833.mvt  mvt_14_8474_5834.mvt  mvt_14_8474_5835.mvt  mvt_14_8475_5832.mvt  mvt_14_8475_5833.mvt  mvt_14_8475_5834.mvt  mvt_14_8475_5835.mvt  mvt_15_16944_11668.mvt  mvt_15_16944_11669.mvt  mvt_15_16944_11670.mvt  mvt_15_16944_11671.mvt  mvt_15_16945_11668.mvt  mvt_15_16945_11669.mvt  mvt_15_16945_11670.mvt  mvt_15_16945_11671.mvt  mvt_15_16946_11668.mvt  mvt_15_16946_11669.mvt  mvt_15_16946_11670.mvt  mvt_15_16946_11671.mvt  mvt_15_16947_11668.mvt  mvt_15_16947_11669.mvt  mvt_15_16947_11670.mvt  mvt_15_16947_11671.mvt
assets/shaders/: model.fsh  model.vsh
